Archive2/04/4247d60a3232d3/output
main.cpp:201:1: error: expected '}' at end of input
 }
 ^
main.cpp: In copy constructor 'AttrValue::AttrValue(const AttrValue&)':
main.cpp:67:55: error: use of deleted function 'std::unique_ptr<_Tp, _Dp>::unique_ptr(const std::unique_ptr<_Tp, _Dp>&) [with _Tp = AttrValue::AttrValueBase; _Dp = std::default_delete<AttrValue::AttrValueBase>]'
     AttrValue(const AttrValue&  value) : ptr(value.ptr) { std::cout << "AttrValue(const AttrValue&  value)" << std::endl; }
                                                       ^
In file included from /usr/local/include/c++/5.1.0/memory:81:0,
                 from main.cpp:7:
/usr/local/include/c++/5.1.0/bits/unique_ptr.h:356:7: note: declared here
       unique_ptr(const unique_ptr&) = delete;
       ^
main.cpp: In constructor 'AttrValue::AttrValue(AttrValue&&)':
main.cpp:68:55: error: use of deleted function 'std::unique_ptr<_Tp, _Dp>::unique_ptr(const std::unique_ptr<_Tp, _Dp>&) [with _Tp = AttrValue::AttrValueBase; _Dp = std::default_delete<AttrValue::AttrValueBase>]'
     AttrValue(      AttrValue&& value) : ptr(value.ptr) { std::cout << "AttrValue(      AttrValue&& value)" << std::endl; }
                                                       ^
In file included from /usr/local/include/c++/5.1.0/memory:81:0,
                 from main.cpp:7:
/usr/local/include/c++/5.1.0/bits/unique_ptr.h:356:7: note: declared here
       unique_ptr(const unique_ptr&) = delete;
       ^
main.cpp: In member function 'AttrValue AttrValue::clone()':
main.cpp:102:5: error: expected primary-expression before '}' token
     }
     ^
main.cpp:102:5: error: expected ',' or ';' before '}' token
main.cpp:102:5: warning: no return statement in function returning non-void [-Wreturn-type]
main.cpp: At global scope:
main.cpp:102:5: error: expected unqualified-id at end of input
